styling the individual project page

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -21,8 +21,13 @@
                     Last year, I reignited my passion for coding, inspired by the talented peers around me. I'm excited to continue learning and growing in this ever-evolving field!
                 </p>
                 <p>
-                    When I'm not on my computer, you can find me exploring <span style="color: #73CADC; font-weight: bold;">scenic hikes</span>, discovering new <span style="color: #73CADC; font-weight: bold;">food spots</span> with my friends, or going to the <span style="color: #73CADC; font-weight: bold;">gym</span>. I love staying 
-                    active and finding new adventures to embark on during my free time!
+                    When I'm not on my computer, you can find me exploring 
+                    <span style="color: #73CADC; font-weight: bold;">scenic hikes 🏔️</span>, 
+                    discovering new 
+                    <span style="color: #73CADC; font-weight: bold;">food spots 🍜</span>
+                     with my friends, or going to the 
+                     <span style="color: #73CADC; font-weight: bold;">gym 🏋️‍♀️</span>. 
+                    I love staying active and finding new adventures to embark on during my free time!
                 </p>
             </div>
         </div>
