fixed filtering for categories and styled

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -56,7 +56,6 @@ h1, h2{
     text-align: justify;
     margin-bottom: 20px; 
     margin-top: 30px;
-    // margin-left: 70px;
 }
 
 .toolbox-container{
@@ -72,8 +71,8 @@ h1, h2{
 }
 
 .toolbox-icons div {
-    width: 20%; /* Set the width of each icon container */
-    text-align: center; /* Center the icons and text within each container */
+    width: 20%; 
+    text-align: center; 
 }
 
 .toolbox-icon {
