--- a/src/app/components/project/project.component.scss
+++ b/src/app/components/project/project.component.scss
@@ -10,7 +10,6 @@
   }
 }
 
-
 * {
   box-sizing: border-box;
 }
@@ -37,13 +36,13 @@ article {
 
 /* Header Styles */
 header {
-  flex-direction: row; /* Keep icons on the same line */
+  flex-direction: row; 
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-bottom: 2px solid #f0f0f0;
   padding-bottom: 10px;
-  width: 100%; /* Ensure header takes full width */
+  width: 100%; 
 }
 
 .back-icon {
@@ -169,7 +168,6 @@ footer .tag-divider {
   border-radius: 5px;
 }
 
-/* Add these styles */
 .snippet-toggle-btn {
   background: none;
   border: none;
@@ -186,9 +184,7 @@ footer .tag-divider {
   }
 }
 
-
-
-/* Media Queries */
+/* Media query for desktop screens */
 @media (max-width: 768px) {
   .project-card img {
     height: auto;
