--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -44,17 +44,17 @@ a {
 
 .project-card {
   display: flex;
-  flex-direction: column; /* Stack image and text vertically on smaller screens */
+  flex-direction: column; 
   padding: 20px;
   max-width: 700px;
   margin: 0 auto;
   animation: fadeIn 1s ease-out; 
 
   img {
-      width: 100%; /* Adjust image width for smaller screens */
-      height: auto; /* Adjust image height for smaller screens */
+      width: 100%; 
+      height: auto; 
       object-fit: cover;
-      margin-bottom: 20px; /* Add margin below the image */
+      margin-bottom: 20px; 
       border-radius: 4px;
   }
 
@@ -104,7 +104,7 @@ footer {
 /* Media query for desktop screens */
 @media (min-width: 768px) {
   .project-card {
-      flex-direction: row; /* Display image and text side by side */
+      flex-direction: row; 
       align-items: center;
 
       img {
@@ -115,8 +115,26 @@ footer {
       }
   }
 
+  .projects-wrapper {
+    display: flex;
+    align-items: flex-start;
+  }
+
+  #projects{
+    margin-top: 30px;
+    margin-left: 100px;
+  }
+
+  .back-icon {
+    font-size: 20px;
+    cursor: pointer;
+    margin-left: 0px;
+    margin-top: 60px;
+    animation: fadeIn 1s ease-out; 
+  }
+
   footer {
-      flex-direction: row; /* Display elements in a row */
+      flex-direction: row;
       justify-content: space-between;
       align-items: center;
   }
