--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -34,7 +34,7 @@
       </footer>
     </article>
   </section>  
-  <a *ngIf="isCategoryPage" href="/projects" class="back-icon">
+  <a *ngIf="isCategoryPage" href="/projects" class="back-icon" title="Clear Filters">
     🌸
   </a>
 </div>
